--- a/rating-games/backend/package.json
+++ b/rating-games/backend/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "nodemon": "^2.0.15"
   }
